# eesd-mmsdb

./: .gitattributes  .gitignore  .lfsconfig  .pre-commit-config.yaml  Makefile  README.md  package-lock.json
backend/: Dockerfile  Makefile  pyproject.toml  start.sh
backend/api/: auth.py  config.py  main.py
backend/api/models/: auth.py  catalog.py  compute.py  files.py  geo.py  properties.py
backend/api/services/: bwgraph.py  correlation.py  files.py  line_minimum_trace.py  mailer.py  properties.py  s3.py
backend/api/templates/: data_uploaded.html
backend/api/views/: auth.py  compute.py  files.py  properties.py
backend/data/downscaled/01_Microstructures_data/01_Real_walls/01_OC/01_OC01/01_Stones_data/: OC01_stone_10.ply  OC01_stone_102.ply  OC01_stone_105.ply  OC01_stone_106.ply  OC01_stone_17.ply  OC01_stone_19.ply  OC01_stone_22.ply  OC01_stone_23.ply  OC01_stone_27.ply  OC01_stone_29.ply  OC01_stone_30.ply  OC01_stone_31.ply  OC01_stone_36.ply  OC01_stone_38.ply  OC01_stone_4.ply  OC01_stone_46.ply  OC01_stone_5.ply  OC01_stone_50.ply  OC01_stone_52.ply  OC01_stone_53.ply  OC01_stone_56.ply  OC01_stone_57.ply  OC01_stone_59.ply  OC01_stone_62.ply  OC01_stone_64.ply  OC01_stone_66.ply  OC01_stone_67.ply  OC01_stone_68.ply  OC01_stone_69.ply  OC01_stone_73.ply  OC01_stone_74.ply  OC01_stone_78.ply  OC01_stone_79.ply  OC01_stone_82.ply  OC01_stone_83.ply  OC01_stone_86.ply  OC01_stone_9.ply  OC01_stone_91.ply  OC01_stone_93.ply  OC01_stone_96.ply
backend/data/downscaled/01_Microstructures_data/01_Real_walls/02_OM/01_OM01/01_Stones_data/: OM01_stone_1.ply  OM01_stone_10.ply  OM01_stone_11.ply  OM01_stone_14.ply  OM01_stone_15.ply  OM01_stone_19.ply  OM01_stone_22.ply  OM01_stone_23.ply  OM01_stone_24.ply  OM01_stone_28.ply  OM01_stone_29.ply  OM01_stone_3.ply  OM01_stone_33.ply  OM01_stone_6.ply
backend/data/downscaled/01_Microstructures_data/01_Real_walls/02_OM/02_OM02/01_Stones_data/: OM02_stone_1.ply  OM02_stone_12.ply  OM02_stone_14.ply  OM02_stone_15.ply  OM02_stone_17.ply  OM02_stone_18.ply  OM02_stone_2.ply  OM02_stone_20.ply  OM02_stone_21.ply  OM02_stone_22.ply  OM02_stone_25.ply  OM02_stone_26.ply  OM02_stone_27.ply
backend/data/downscaled/01_Microstructures_data/01_Real_walls/02_OM/03_OM03/01_Stones_data/: OM03_stone_14.ply  OM03_stone_15.ply  OM03_stone_17.ply  OM03_stone_22.ply  OM03_stone_26.ply  OM03_stone_3.ply
backend/data/original/03_Stones_geometric_properties/: OM01.csv  OM02.csv  OM04.csv  OM05.csv  OM06.csv  SB01.csv  SB02.csv  SB05.csv  SB06.csv  SB07.csv  SB09.csv  SB11.csv  SB12.csv  SB13.csv  SB16.csv  SB17.csv  SS04.csv  SS05.csv  WS02.csv  WS05.csv  WS06.csv  WS07.csv
backend/tests/: test_lmt.py
(+11996 files in other folders)
